# cpp-htslib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  \  build.sh
CMakeModules/: FindBenchmark.cmake  FindBenchmarkSrc.cmake  FindGTestSrc.cmake  FindTcmalloc.cmake
benchmark/: CMakeLists.txt  inline_bench.cpp  unordered_map_bench.cpp  vcf_traverse_bench.cpp
example/: CMakeLists.txt
example/coverage/: CMakeLists.txt  main.cpp
example/merge_interval/: CMakeLists.txt  main.cpp
example/mpileup/: CMakeLists.txt  bam2bcf.c  bam2bcf.h  bam2bcf_indel.h  bcftools.h  call.h  kthread.c  kthread.h  mpileup.cpp  mpileup2.cpp  mpileup_bcftools.cpp  mpileup_bcftools2.cpp  mpileup_bcftools_region.cpp  pileup_buffer.h  ploidy.h  sam_opts.h  sam_utils.c  sam_utils.h  vcfcall.c  vcmp.h
example/mutect/: CMakeLists.txt  call_stats_generator.cpp  call_stats_generator.h  candidate_mutation.cpp  candidate_mutation.h  cga_alignment_utils.h  locus_read_pile.cpp  locus_read_pile.h  main.cpp  mutect.cpp  mutect.h  mutect_args.h  power_calculator.h  power_calculator_unittest.cpp  quality_sums.h  sequence_utils.h  variable_allelic_ratio_genotype_likelyhoods.h  vcf_generator.cpp  vcf_generator.h
example/read_stat/: CMakeLists.txt  main.cpp
mpileup/: sam_utils.h  thread_pool.h
mutect/: CMakeLists.txt  mutect.cpp  parser.h
script/: check_mpileup.sh  check_mutect.sh  mpileup.sh  mpileup_tune_chunk_size.sh  mutect.sh  valgrind.sh
src/: CMakeLists.txt  alignment_state_machine.cpp  alignment_state_machine_unittest.cpp  args_parser.cpp  bam2bcf_indel.c  bam_index.cpp  bam_index.h  bam_index_reader.cpp  bam_index_reader.h  base_utils.cpp  bedidx.c  bedidx.h  binomial_distribution.cpp  diploid_SNP_genotype_likelihoods.cpp  diploid_genotype.cpp  downsampler.cpp  easehts.h  genome_loc.cpp  genome_loc.h  genome_loc_unittest.cpp  genotype.cpp  main.cpp  main_unittest.cpp  mpileup.cpp  mpileup2.cpp  pileup.cpp  pileup.h  pileup_buffer.cpp  pileup_unittest.cpp  reader.cpp  reader.h  reader_unittest.cpp  reference_sequence.cpp  reference_sequence_unittest.cpp  sam_bam_header.cpp  sam_bam_header.h  sam_bam_normal_reader.cpp  sam_bam_normal_reader.h  sam_bam_read_unittest.cpp  sam_bam_reader.cpp  (+17 more)
src/easehts/: alignment_state_machine.h  args_parser.h  base_utils.h  binomial_distribution.h  diploid_SNP_genotype_likelihoods.h  diploid_genotype.h  downsampler.h  easehts.h  genome_loc.h  genotype.h  interval.h  noncopyable.h  pileup.h  pileup_tracker.h  reference_sequence.h  sam_bam_reader.h  sam_bam_record.h  sam_file_header.h  sam_sequence_dictionary.h  sam_text_header_codec.h  thread_pool.h  unittest.h  utils.h  variant_context.h  vcf.h  vcf_header_line.h
src/easehts/gatk/: alignment_state_machine.h  downsampler.h  pileup.h  pileup_tracker.h
src/gatk/: CMakeLists.txt  alignment_state_machine.cpp  alignment_state_machine_unittest.cpp  pileup.cpp
test/: uncompressed.sam
test/mutect/: MG225_normal_sorted_X.bam.bai  MG225_tumor_sorted_X.bam.bai  mutect_panle_372.interval_list  result.txt  result.vcf
test/pileup/: bcftools  mpileup-clion.vcf  mpileup.1.sam  mpileup.vcf  out.vcf  result.vcf  samtools
test/vcf/: exampleDBSNP.compress.vcf  exampleDBSNP.compress.vcf.csi
tools/: samtools
